#define MD_GET_SP(_t) (_t)->context[0].__jmpbuf[8] ,use 8 to fix the bug, lookupdns linked static lib, so it will not link libst.a when it is running

--- a/toffaletti/armhf/CMakeLists.txt
+++ b/toffaletti/armhf/CMakeLists.txt
@@ -38,4 +38,4 @@ target_link_libraries(lookupdns st resolv)
 add_executable(threaded examples/threaded.c)
 target_link_libraries(threaded st)
 
-add_subdirectory(extensions)
+#add_subdirectory(extensions)
